		locales
	documented how to use mysql stored procedure output parameters
	applied james@thoughtpatterns.com's perl null bind patch
	applied Tim Bunce's perl dbi driver patch
	suppress error message of cat $ORACLE_HOME/lib/sysliblist in configure
		script
	added support for stored procedures which return result sets to sybase
		connection

0.38 - implemented mysql_stmt function support in mysql connection
	fixed mysql_autocommit detection
	fixed missing self before __getRow and __getRowRange in python db driver
	implemented query filtering and routing
	interbase/firebird dead-db/relogin works now
	added test for 0 length result set to PySQLRDB's fetchmany method
	added mysql_config sanity test to configure script
	NULL's are escaped in fake input BLOB binds now
	query router works pretty well now
	applied Sharpinskiy Dmitry's odbc unicode patch
	integrated Devananda's statistics gathering code
	added support for mysql stored procedures
	integrated Devananda's mysql result set updates
	sqlrelay.conf.example installed as $datadir/examples/sqlrelay.conf now
	integrated Andreas Behr's listener crash patch
	removed erroneous reference to sqlrcon_errormessage in php pear db
	another multibyte clob fix
	added "delimiter" command to sqlrsh to change
		delimiter from ; to whatever
	removed msql support
	added db2 9.1 installation doc
	added firebird 2.0 installation docs
	router connection overrides authtier=database
	fixed a bug where clients would hang if they requested a cursor when
		none were available
	added some additional mdb 5 checks to configure script
	added iconv const char parameter check to configure script
	the main listener doesn't listen for clients until all of the
		connections have started now
	added notes about tcp_tw_recycle/tcp_tw_reuse in tuning doc
	ping causes the connection to relogin if it returns false now
	added iconv include/library find to configure script
	fixed sqlrlistener so forked listeners don't remove the pid file